[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Pixel Adventure 1/Free/Main Characters/Ninja Frog/Jump_Fall_Hit(32x32).png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 5.5 )

[sub_resource type="Animation" id=4]
resource_name = "Falling"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Getting Hit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 4, 7, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jumping"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 21.0

[node name="Player" type="RigidBody2D"]
mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
hframes = 9
frame = 1

[node name="Bodycollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bodycollider"]
position = Vector2( 1.5, 34 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Falling = SubResource( 4 )
"anims/Getting Hit" = SubResource( 5 )
anims/Jumping = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -23.5 )
scale = Vector2( 3, 0.15 )

[node name="Areacollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areacollider"]
position = Vector2( 1, 7 )
shape = SubResource( 8 )

[connection signal="area_entered" from="Bodycollider" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Bodycollider" to="." method="_on_collision"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
